--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Framework\EventSystem.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="Graphics\Texture.cpp" />
+    <ClCompile Include="Input\InputSystem.cpp" />
     <ClCompile Include="Object\Actor.cpp" />
     <ClCompile Include="Object\Scene.cpp" />
     <ClCompile Include="Resource\ResourceSystem.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="Framework\System.h" />
     <ClInclude Include="Graphics\Renderer.h" />
     <ClInclude Include="Graphics\Texture.h" />
+    <ClInclude Include="Input\InputSystem.h" />
     <ClInclude Include="Object\Actor.h" />
     <ClInclude Include="Object\Object.h" />
     <ClInclude Include="Object\Scene.h" />
