--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="GameComponent\EnemyComponent.cpp">
       <Filter>Source\GameComponent</Filter>
     </ClCompile>
+    <ClCompile Include="GameComponent\PickUpComponent.cpp">
+      <Filter>Source\GameComponent</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -39,6 +42,9 @@
       <Filter>Source\GameComponent</Filter>
     </ClInclude>
     <ClInclude Include="GameComponent\EnemyComponent.h">
+      <Filter>Source\GameComponent</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponent\PickUpComponent.h">
       <Filter>Source\GameComponent</Filter>
     </ClInclude>
   </ItemGroup>
