--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="Physics\ContactListener.cpp">
       <Filter>Source Files\Physics</Filter>
     </ClCompile>
+    <ClCompile Include="Object\TileMap.cpp">
+      <Filter>Source Files\Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\EventSystem.h">
@@ -248,9 +251,18 @@
     <ClInclude Include="Physics\ContactListener.h">
       <Filter>Source Files\Physics</Filter>
     </ClInclude>
+    <ClInclude Include="Object\TileMap.h">
+      <Filter>Source Files\Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Build\Resources\scene.txt">
+      <Filter>Resource</Filter>
+    </Text>
+    <Text Include="..\Build\Resources\map.txt">
+      <Filter>Resource</Filter>
+    </Text>
+    <Text Include="..\Build\Resources\title.txt">
       <Filter>Resource</Filter>
     </Text>
   </ItemGroup>
