--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -149,8 +149,11 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameComponent\EnemyComponent.cpp" />
+    <ClCompile Include="GameComponent\ExtraLifeComponent.cpp" />
     <ClCompile Include="GameComponent\PickUpComponent.cpp" />
     <ClCompile Include="GameComponent\PlayerComponent.cpp" />
+    <ClCompile Include="GameComponent\ProjectileComponent.cpp" />
+    <ClCompile Include="GameComponent\TargetComponent.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -161,8 +164,11 @@
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameComponent\EnemyComponent.h" />
+    <ClInclude Include="GameComponent\ExtraLifeComponent.h" />
     <ClInclude Include="GameComponent\PickUpComponent.h" />
     <ClInclude Include="GameComponent\PlayerComponent.h" />
+    <ClInclude Include="GameComponent\ProjectileComponent.h" />
+    <ClInclude Include="GameComponent\TargetComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
