--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClCompile Include="GameComponent\PickUpComponent.cpp">
       <Filter>Source\GameComponent</Filter>
     </ClCompile>
+    <ClCompile Include="GameComponent\ExtraLifeComponent.cpp">
+      <Filter>Source\GameComponent</Filter>
+    </ClCompile>
+    <ClCompile Include="GameComponent\TargetComponent.cpp">
+      <Filter>Source\GameComponent</Filter>
+    </ClCompile>
+    <ClCompile Include="GameComponent\ProjectileComponent.cpp">
+      <Filter>Source\GameComponent</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -45,6 +54,15 @@
       <Filter>Source\GameComponent</Filter>
     </ClInclude>
     <ClInclude Include="GameComponent\PickUpComponent.h">
+      <Filter>Source\GameComponent</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponent\ExtraLifeComponent.h">
+      <Filter>Source\GameComponent</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponent\TargetComponent.h">
+      <Filter>Source\GameComponent</Filter>
+    </ClInclude>
+    <ClInclude Include="GameComponent\ProjectileComponent.h">
       <Filter>Source\GameComponent</Filter>
     </ClInclude>
   </ItemGroup>
